feat: added workspaceName and getAllWorkspaceNames endpoint
